# DNAge

./: CMakeLists.txt  README.md
include/dnage/: dnage.h  random.h
include/dnage/genetic/: population.h
src/genetic/: genetic_algorithm.cpp  genome.cpp  population.cpp
